RESOLVED FIXED92094
[WTR][EFL] Wheel events are not emitted
https://bugs.webkit.org/show_bug.cgi?id=92094
Summary [WTR][EFL] Wheel events are not emitted
Alexander Shalamov
Reported 2012-07-24 04:06:08 PDT
Mouse wheel events are not emitted when fired from EventSenderProxy
Attachments
Patch (4.58 KB, patch)
2012-07-24 04:13 PDT, Alexander Shalamov
no flags
Patch (3.08 KB, patch)
2012-07-24 05:05 PDT, Alexander Shalamov
no flags
Patch (3.18 KB, patch)
2012-07-24 05:34 PDT, Alexander Shalamov
no flags
Alexander Shalamov
Comment 1 2012-07-24 04:13:13 PDT
Created attachment 154014 [details] Patch Fix for wheel event.
Chris Dumez
Comment 2 2012-07-24 04:25:36 PDT
Comment on attachment 154014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154014&action=review > Tools/WebKitTestRunner/efl/EventSenderProxyEfl.cpp:144 > +static void dispatchMouseDownEvent(Evas* evas, unsigned button, WKEventModifiers wkModifiers, int clickCount) Looks unrelated to this bug. Maybe it should be in a separate patch? > Tools/WebKitTestRunner/efl/EventSenderProxyEfl.cpp:304 > + dispatchMouseDownEvent(ecore_evas_get(m_testController->mainWebView()->platformWindow()), event.button, event.modifiers, m_clickCount); Ditto. > Tools/WebKitTestRunner/efl/PlatformWebViewEfl.cpp:53 > + evas_object_show(m_view); Ditto. > Tools/WebKitTestRunner/efl/PlatformWebViewEfl.cpp:74 > + evas_object_focus_set(m_view, EINA_TRUE); Ditto.
Alexander Shalamov
Comment 3 2012-07-24 05:05:20 PDT
Created attachment 154024 [details] Patch Removed click related code.
Alexander Shalamov
Comment 4 2012-07-24 05:06:56 PDT
(In reply to comment #2) > (From update of attachment 154014 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=154014&action=review > > > Tools/WebKitTestRunner/efl/EventSenderProxyEfl.cpp:144 > > +static void dispatchMouseDownEvent(Evas* evas, unsigned button, WKEventModifiers wkModifiers, int clickCount) > > Looks unrelated to this bug. Maybe it should be in a separate patch? Removed, will file new bug > > Tools/WebKitTestRunner/efl/PlatformWebViewEfl.cpp:53 > > + evas_object_show(m_view); > > Ditto. > > > Tools/WebKitTestRunner/efl/PlatformWebViewEfl.cpp:74 > > + evas_object_focus_set(m_view, EINA_TRUE); > > Ditto. Those are required. View should not be hidden and should be focused, otherwise wheel events are not received in ewk view.
Chris Dumez
Comment 5 2012-07-24 05:17:42 PDT
Comment on attachment 154024 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154024&action=review > Tools/WebKitTestRunner/efl/EventSenderProxyEfl.cpp:361 > + event.horizontal = -(horizontal); Why the brackets? > Tools/WebKitTestRunner/efl/EventSenderProxyEfl.cpp:362 > + event.vertical = -(vertical); Ditto.
Chris Dumez
Comment 6 2012-07-24 05:18:20 PDT
Comment on attachment 154024 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154024&action=review > Tools/WebKitTestRunner/efl/PlatformWebViewEfl.cpp:74 > + evas_object_focus_set(m_view, EINA_TRUE); This is a cpp file, please use true instead of EINA_TRUE.
Chris Dumez
Comment 7 2012-07-24 05:20:17 PDT
Comment on attachment 154024 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154024&action=review > Tools/WebKitTestRunner/efl/EventSenderProxyEfl.cpp:-371 > - event.vertical = vertical; It might be worth adding a comment to explain why we need to reverse the values.
Alexander Shalamov
Comment 8 2012-07-24 05:34:09 PDT
Created attachment 154026 [details] Patch Applied fixed according to review comments
Chris Dumez
Comment 9 2012-07-24 05:34:49 PDT
Comment on attachment 154026 [details] Patch LGTM.
Csaba Osztrogonác
Comment 10 2012-07-25 02:27:35 PDT
Comment on attachment 154026 [details] Patch rs=me based on informal review.
WebKit Review Bot
Comment 11 2012-07-25 03:26:51 PDT
Comment on attachment 154026 [details] Patch Clearing flags on attachment: 154026 Committed r123599: <http://trac.webkit.org/changeset/123599>
WebKit Review Bot
Comment 12 2012-07-25 03:26:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.