[WTR][EFL] Wheel events are not emitted https://bugs.webkit.org/show_bug.cgi?id=92094

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2012-07-25
Reviewed by Csaba Osztrogonác.

Wheel events are not emitted, therefore, layout tests that use mouseScrollBy method are failing.

* WebKitTestRunner/efl/EventSenderProxyEfl.cpp:
(WTR::dispatchMouseScrollByEvent):
(WTR::EventSenderProxy::mouseScrollBy):
* WebKitTestRunner/efl/PlatformWebViewEfl.cpp:
(WTR::PlatformWebView::PlatformWebView):
(WTR::PlatformWebView::focus):

Canonical link: https://commits.webkit.org/110039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123599 268f45cc-cd09-0410-ab3c-d52691b4dbfc